[package]
name = "odin_goesr"
version = "0.1.0"
edition = "2024"

build = "../build_resources.rs"

[[bin]]
name = "read_goesr_hotspots"
path = "src/bin/read_goesr_hotspots.rs"

[[bin]]
name = "download_goesr_data"
path = "src/bin/download_goesr_data.rs"

[dependencies]
# our ODIN crates
odin_build = { workspace = true }
odin_action = { workspace = true }
odin_actor = { workspace = true }
odin_common = { workspace = true, features = ["s3"] }
odin_macro = { workspace = true }
odin_gdal = { workspace = true }
odin_server = { workspace = true }
odin_cesium = { workspace = true }

gdal-sys = { workspace = true, features = ["bindgen"]}
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uom = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

serde_with = { workspace = true }
anyhow = { workspace = true }
meshgridrs = "0.1.1"
paste = { workspace = true }
structopt = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }

[build-dependencies]
odin_build = { workspace = true }

[package.metadata.odin_configs]
goesr = { file="goesr.ron" }
goes_16_fdcc = { file="goes_16_fdcc.ron" }
goes_18_fdcc = { file="goes_18_fdcc.ron" }

[features]
embedded_resources = []

# pass through build features to control how cesium libs are served (default is proxied)
cesium_asset = ["odin_cesium/cesium_asset"]
cesium_external = ["odin_cesium/cesium_external"]