[package]
name = "odin_hrrr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "get_hrrr"
path = "src/bin/get_hrrr.rs"

[dependencies]
lazy_static = "*"
bytes = "*"
structopt = "*"
regex = "*"
anyhow = "*"
tempfile = "*"
serde_derive = "*"

# workspace dependencies
odin_common = { workspace = true }
odin_actor = { workspace = true }
odin_action = { workspace = true }
odin_build = { workspace = true }

futures = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
odin_build = { workspace = true }