[package]
name = "odin_hrrr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "get_hrrr"
path = "src/bin/get_hrrr.rs"

[dependencies]
lazy_static = { workspace = true }
bytes = { workspace = true }
structopt = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
tempfile = "3.20.0"

# workspace dependencies
odin_common = { workspace = true }
odin_actor = { workspace = true }
odin_action = { workspace = true }
odin_build = { workspace = true }

futures = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
odin_build = { workspace = true }

[features]
## inline crate-specific resources (configs and assets) into the executable (see odin_build)
embedded_resources = []