[package]
name = "odin_jpss"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "get_jpss"
path = "src/bin/get_jpss.rs"

[[bin]]
name = "read_jpss"
path = "src/bin/read_jpss.rs"

[dependencies]
# our ODIN crates
odin_actor = { workspace = true }
odin_common = { workspace = true }
odin_build = { workspace = true }

reqwest = "*"
tokio = "*"
anyhow = "*"
serde = "*"
serde_json = "*"
chrono = "*"
http = "*"
tempfile = "*"
uom = { version = "*", features = ["serde", "f32"] }
csv = "*"
sgp4 = "*"
structopt = "*"
lazy_static = "*"
nalgebra = "*"
nav-types = "*"
geo = "*"
thiserror = "*"
tracing = "*"
ron = "*"