[package]
name = "odin_macro"
version = "0.2.0"
license-file = "LICENSE.txt"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "odin_macro"
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.85", features = ["full","extra-traits","visit"] }
proc-macro2 = { version = "1.0.89" }

[dev-dependencies]
serde = { version = "1.0.214", features = ["derive"] }