[package]
name = "odin_macro"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE.txt"

[lib]
name = "odin_macro"
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full","extra-traits","visit"] }
proc-macro2 = { version = "1.0.101" }

[dev-dependencies]
serde = { workspace = true }