[package]
name = "odin_orbital"
version = "0.1.0"
edition = "2021"
build = "../build_resources.rs"


[dependencies]
# our ODIN crates
odin_build = { workspace = true }
odin_action = { workspace = true }
odin_actor = { workspace = true }
odin_common = { workspace = true }
odin_server = { workspace = true }
odin_cesium = { workspace = true }

axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uom = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
nalgebra = { workspace = true }
anyhow = { workspace = true }
structopt = { workspace = true }
lazy_static = { workspace = true }

regex = "1.11.1"
satkit = "0.5.5"

[build-dependencies]
odin_build = { workspace = true }

[features]
embedded_resources = []