[package]
name = "odin_orbital"
version = "0.1.0"
edition = "2024"

build = "../build_resources.rs"


[dependencies]
# our ODIN crates
odin_build = { workspace = true }
odin_action = { workspace = true }
odin_actor = { workspace = true }
odin_job = { workspace = true }
odin_common = { workspace = true }
odin_server = { workspace = true }
odin_cesium = { workspace = true }
odin_macro = { workspace = true }
odin_share = { workspace = true }
odin_dem = { workspace = true }

axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
geo = { workspace = true }
uom = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
nalgebra = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
hashbrown = { workspace = true }
bit-set = { workspace = true }

csv = "1.3.1"
satkit = "0.8.0"
static_init = "1.0.4"

[build-dependencies]
odin_build = { workspace = true }

[features]
embedded_resources = []