[package]
name = "odin_sentinel"
version = "0.1.0"
edition = "2021"
build = "../build_resources.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "show_sentinels"
path = "src/bin/show_sentinels.rs"

[[bin]]
name = "get_sentinels"
path = "src/bin/get_sentinels.rs"

[[bin]]
name = "monitor_ws"
path = "src/bin/monitor_ws.rs"

[[bin]]
name = "send_ws_cmd"
path = "src/bin/send_ws_cmd.rs"

[[bin]]
name = "test_infos"
path = "src/bin/test_infos.rs"

[[bin]]
name = "sentinel_alarm"
path = "src/bin/sentinel_alarm.rs"

[[bin]]
name = "test_signal_rpc_alarm"
path = "src/bin/test_signal_rpc_alarm.rs"
required-features = ["signal_rpc"]


[dependencies]
# our ODIN crates
odin_build = { workspace = true }
odin_action = { workspace = true }
odin_actor = { workspace = true }
odin_server = { workspace = true }
odin_cesium = { workspace = true }
odin_job = { workspace = true }
odin_common = { workspace = true }
odin_macro = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uom = { workspace = true }
async-trait = { workspace = true }

tracing = "*"
anyhow = "*"
thiserror = "*"
ron = "*"
serde_with = "*" 
tokio-util = { version = "*", features = ["full"] }
futures = "*"
async-stream = "*"
http = "*"
url = "*"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
lazy_static = "*"
structopt = "*"
displaydoc = "*"
strum = { version = "*", features = ["derive"]}
paste = "*"
which = "*"

jsonrpsee =  { version = "*",  features = ["macros","async-client","http-client"], optional = true }
lettre = { version = "*", features = ["tokio1", "tokio1-native-tls"], optional = true }
dhat = { version = "*", optional = true }


[build-dependencies]
odin_build = { workspace = true }

[features]
default = ["smtp", "slack"]
smtp = ["dep:lettre"]
signal_rpc = ["dep:jsonrpsee"]
slack = []
slack_admin = ["odin_common/slack_admin"]

# dev/debug
dhat = ["dep:dhat", "odin_common/dhat"] # heap profiling

embedded_resources = []

[package.metadata.odin_configs]
sentinel = { file="sentinel.ron" }
sentinel_alarm = { file="sentinel_alarm.ron", bins=["sentinel_alarm"] }
sentinel_info = { file="sentinel_info.ron", bins=["sentinel_alarm"] }
slack = {file="slack_alarm.ron", bins=["sentinel_alarm"] }

smtp = { file="smtp.ron", bins=["sentinel_alarm"] }
signal_cmd = { file="signal_cmd.ron", bins=["sentinel_alarm"] }

# [profile.release]
# debug = 1  # better build with RUSTFLAGS=-g