[package]
name = "odin_sentinel"
version = "0.1.0"
edition = "2024"

build = "../build_resources.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "show_sentinels"
path = "src/bin/show_sentinels.rs"

[[bin]]
name = "get_sentinels"
path = "src/bin/get_sentinels.rs"

[[bin]]
name = "monitor_ws"
path = "src/bin/monitor_ws.rs"

[[bin]]
name = "send_ws_cmd"
path = "src/bin/send_ws_cmd.rs"

[[bin]]
name = "test_infos"
path = "src/bin/test_infos.rs"

[[bin]]
name = "sentinel_alarm"
path = "src/bin/sentinel_alarm.rs"

[[bin]]
name = "test_signal_rpc_alarm"
path = "src/bin/test_signal_rpc_alarm.rs"
required-features = ["signal_rpc"]


[dependencies]
# our ODIN crates
odin_build = { workspace = true }
odin_action = { workspace = true }
odin_actor = { workspace = true }
odin_server = { workspace = true }
odin_cesium = { workspace = true }
odin_job = { workspace = true }
odin_common = { workspace = true }
odin_macro = { workspace = true }

futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true } # this uses native-tls
reqwest = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uom = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
ron = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
structopt = { workspace = true }
paste = { workspace = true }
http = { workspace = true }
url = { workspace = true }
trait-set = { workspace = true }
async-stream = "0.3.6"

displaydoc = "0.2.5"
strum = { version = "0.27.1", features = ["derive"]}
which = "7.0.3"

jsonrpsee =  { version = "0.25.1",  features = ["macros","async-client","http-client"], optional = true }
lettre = { version = "0.11.16", features = ["tokio1", "tokio1-native-tls"], optional = true }
dhat = { version = "0.3.3", optional = true }

[build-dependencies]
odin_build = { workspace = true }

[features]
default = ["smtp", "slack"]
smtp = ["dep:lettre"]
signal_rpc = ["dep:jsonrpsee"]
slack = []
slack_admin = ["odin_common/slack_admin"]

# dev/debug
dhat = ["dep:dhat", "odin_common/dhat"] # heap profiling

embedded_resources = []

# Packages that are actually required inspite of machete report.
[package.metadata.cargo-machete]
ignored = ["dhat", "odin_action"]

[package.metadata.odin_configs]
sentinel = { file="sentinel.ron" }
sentinel_alarm = { file="sentinel_alarm.ron", bins=["sentinel_alarm"] }
sentinel_info = { file="sentinel_info.ron", bins=["sentinel_alarm"] }
slack = {file="slack_alarm.ron", bins=["sentinel_alarm"] }

smtp = { file="smtp.ron", bins=["sentinel_alarm"] }
signal_cmd = { file="signal_cmd.ron", bins=["sentinel_alarm"] }

# pass through build features to control how cesium libs are served (default is proxied)
cesium_asset = ["odin_cesium/cesium_asset"]
cesium_external = ["odin_cesium/cesium_external"]

# [profile.release]
# debug = 1  # better build with RUSTFLAGS=-g