[package]
name = "odin_server"
version = "0.1.0"
edition = "2024"
build = "../build_resources.rs"

[lib]
doctest = false

[dependencies]
axum-server = { version = "*", features = ["tls-rustls"] }
bytes = "*"
anyhow = "*"
headers = "*"
futures-util = { version = "*", features = ["sink"] }
xattr = "*"
minify-html = "*"
http-body = "1.0.1"
http-body-util = "0.1.2"
tokio-util = "0.7.12"
tower = { version = "*", features = ["full"] }
tower-http = { version = "*", features = ["full"] }
tracing-subscriber = "*"
reqwest-middleware = { version = "*" }
http-cache-reqwest = { version = "*" }
paste = "*"
mime = "*"
mime_guess = "*"
rand = "*"
open = "5"
regex = "1.11.1"
glob = "0.3.1"

axum = { workspace = true }
reqwest = {workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

odin_build = { workspace = true }
odin_macro = { workspace = true }
odin_actor = { workspace = true }
odin_common = { workspace = true }

[build-dependencies]
odin_build = { workspace = true }

[package.metadata.odin_configs]
spa_server = { file = "spa_server.ron"}

[package.metadata.odin_assets]
ws_js = { file = "ws.js" }
ui = { file = "ui.js" }
ui_data = { file = "ui_data.js" }
ui_utils = { file = "ui_utils.js" }
ui_settings_config = { file = "ui_settings_config.js"}
ui_settings = { file = "ui_settings.js" }
ui_css = { file = "ui.css" }
ui_load_theme_js = { file = "ui_load_theme.js"}
ui_theme_dark_css = { file = "ui_theme_dark.css"}
ui_theme_light_css = { file = "ui_theme_light.css"}
ui_theme_night_css = { file = "ui_theme_night.css"}
settings_icon_svg = { file = "settings_icon.svg"}


[features]
trace_server = []
embedded_resources = []