[package]
name = "odin_server"
version = "0.1.0"
edition = "2024"
build = "../build_resources.rs"

[lib]
doctest = false

[dependencies]
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
bytes = "1.10.1"
anyhow = { workspace = true }
headers = "0.4.0"
futures-util = { workspace = true }
minify-html = "0.16.4"
http-body = "1.0.1"
http-body-util = "0.1.2"
tokio-util = "0.7.14"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing-subscriber = "*"
reqwest-middleware = "0.4.1"
http-cache-reqwest = "0.15.1"
paste = { workspace = true }
mime = "0.3.17"
mime_guess = "2.0.5"
rand = "0.9.0"
open = "5"
regex = { workspace = true }
glob = "0.3.1"

axum = { workspace = true }
reqwest = {workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

odin_build = { workspace = true }
odin_macro = { workspace = true }
odin_actor = { workspace = true }
odin_common = { workspace = true }

[build-dependencies]
odin_build = { workspace = true }

[package.metadata.odin_configs]
spa_server = { file = "spa_server.ron"}

[package.metadata.odin_assets]
ws_js = { file = "ws.js" }
ui = { file = "ui.js" }
ui_data = { file = "ui_data.js" }
ui_utils = { file = "ui_utils.js" }
ui_settings_config = { file = "ui_settings_config.js"}
ui_settings = { file = "ui_settings.js" }
ui_css = { file = "ui.css" }
ui_load_theme_js = { file = "ui_load_theme.js"}
ui_theme_dark_css = { file = "ui_theme_dark.css"}
ui_theme_light_css = { file = "ui_theme_light.css"}
ui_theme_night_css = { file = "ui_theme_night.css"}
settings_icon_svg = { file = "settings_icon.svg"}


[features]
trace_server = []
embedded_resources = []
