[package]
name = "odin_server"
version = "0.1.0"
edition = "2024"

build = "../build_resources.rs"

[lib]
doctest = false

[dependencies]
axum-server = { version = "0.7", features = ["tls-rustls"] }
bytes = { workspace = true }
anyhow = { workspace = true }
headers = { workspace = true }
futures-util = { workspace = true }
minify-html = "0.16.4"
http = { workspace = true }
http-body = "1.0.1"
http-body-util = "0.1.3"
tower = { workspace = true}
tower-http = { workspace = true }
tracing-subscriber = "0.3.19"
reqwest-middleware = { workspace = true }
http-cache-reqwest = { workspace = true }
#cacache = { workspace = true }
paste = { workspace = true }
mime = "0.3.17"
mime_guess = "2.0.5"
rand = { workspace = true }
open = "5"
regex = { workspace = true }
glob = { workspace = true }
clap = { workspace = true }
lazy_static = { workspace = true }

axum = { workspace = true }
reqwest = {workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# pw protected servers and user sessions (we might put these behind a feature
axum-login = { workspace = true }
password-auth = {workspace = true }
passwords = { workspace = true }
sqlx = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }

odin_build = { workspace = true }
odin_macro = { workspace = true }
odin_actor = { workspace = true }
odin_common = { workspace = true }

[build-dependencies]
odin_build = { workspace = true }

[package.metadata.odin_configs]
spa_server = { file = "spa_server.ron"}

[package.metadata.odin_assets]
ws_js = { file = "ws.js" }
ui = { file = "ui.js" }
ui_data = { file = "ui_data.js" }
ui_utils = { file = "ui_utils.js" }
ui_settings_config = { file = "ui_settings_config.js"}
ui_settings = { file = "ui_settings.js" }
ui_css = { file = "ui.css" }
ui_load_theme_js = { file = "ui_load_theme.js"}
ui_theme_dark_css = { file = "ui_theme_dark.css"}
ui_theme_light_css = { file = "ui_theme_light.css"}
ui_theme_night_css = { file = "ui_theme_night.css"}
settings_icon_svg = { file = "settings_icon.svg"}


[features]
trace_server = []
embedded_resources = []
