[package]
name = "odin_wind"
version = "0.1.0"
edition = "2024"


[dependencies]
lazy_static = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true , features = ["json","blocking"] }
bytes = { workspace = true }
structopt = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
futures-util = { workspace = true }

odin_common = { workspace = true }
odin_hrrr = { workspace = true }
odin_actor = { workspace = true }
odin_build = { workspace = true }
odin_action = { workspace = true }
odin_dem = { workspace = true }
odin_server = { workspace = true }
odin_cesium = { workspace = true }
odin_share = { workspace = true }
odin_gdal = { workspace = true }

tracing-subscriber = "0.3.19"

[features]
trace_server = []

## inline crate-specific resources (configs and assets) into the executable (see odin_build)
embedded_resources = []