[package]
name = "odin_windninja"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
tokio = { workspace = true }
warp = "0.3"
reqwest = { workspace = true , features = ["json","blocking"] }
bytes = "1.4"
structopt = "0.3"
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = "1"
regex = "1"
thiserror = { workspace = true }

