[package]
name = "odin_windninja"
version = "0.1.0"
edition = "2024"


[dependencies]
lazy_static = { workspace = true }
tokio = { workspace = true }
warp = "0.3"
reqwest = { workspace = true , features = ["json","blocking"] }
bytes = { workspace = true }
structopt = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

